# gnu_guile-cairo

./: .bzrignore  .gitignore  COPYING.docs  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  autogen-support.sh  autogen.sh  cairo.scm  configure.ac  env.in  guile-cairo.pc.in
cairo/: Makefile.am  cairo-procedures.txt  config.scm.in  guile-cairo-types.c  guile-cairo-types.h  guile-cairo.c  guile-cairo.h  vector-types.scm
doc/: COPYING.docs  Makefile.am  README  defuns-cairo-device.xml.texi  defuns-cairo-font-options.xml.texi  defuns-cairo-font.xml.texi  defuns-cairo-image.xml.texi  defuns-cairo-matrix.xml.texi  defuns-cairo-paths.xml.texi  defuns-cairo-pattern.xml.texi  defuns-cairo-pdf.xml.texi  defuns-cairo-png.xml.texi  defuns-cairo-ps.xml.texi  defuns-cairo-recording.xml.texi  defuns-cairo-region.xml.texi  defuns-cairo-scaled-font.xml.texi  defuns-cairo-surface.xml.texi  defuns-cairo-svg.xml.texi  defuns-cairo-text.xml.texi  defuns-cairo-transforms.xml.texi  defuns-cairo-user-fonts.xml.texi  defuns-cairo-version.xml.texi  defuns-cairo-xlib-xrender.xml.texi  defuns-cairo.xml.texi  docbook-to-guile-doc  generate-doc-defuns  generate-doc-stubs  generate-docs.mk  guile-cairo.texi  overrides.texi  release  section-cairo-device.xml.texi  section-cairo-font-face.xml.texi  section-cairo-font-options.xml.texi  section-cairo-font.xml.texi  section-cairo-ft.xml.texi  section-cairo-image.xml.texi  section-cairo-matrix.xml.texi  section-cairo-paths.xml.texi  section-cairo-pattern.xml.texi  (+21 more)
doc/www/: index.scm  template.scm
doc/www/dev/: index.scm
doc/www/docs/: index.scm
doc/www/download/: index.scm
doc/www/news/: index.scm
examples/: Makefile.am
guile-cairo/: Makefile.am  guile-cairo-compat.c  guile-cairo-compat.h  guile-cairo-enum-types.c  guile-cairo-enum-types.h  guile-cairo-smob-types.c  guile-cairo-smob-types.h  guile-cairo-vector-types.c  guile-cairo-vector-types.h  guile-cairo.c  guile-cairo.h
tests/: Makefile.am
tests/unit-tests/: Makefile.am  api-stability.scm  cairo.api  update-api  version.scm
